--- a/mysite/shop/templates/base.html
+++ b/mysite/shop/templates/base.html
@@ -119,8 +119,9 @@ nav a:hover,
 
         .container {
             margin-left: 20px;
-            padding: 20px;
-            padding-top: 80px; /* Adjusted to account for fixed header */
+            padding-bottom: 20px;
+            padding-right: 20px;
+            padding-top: 20px; /* Adjusted to account for fixed header */
             transition: margin-left 0.3s; /* Smooth transition when menu is toggled */
         }
 
@@ -184,11 +185,14 @@ nav a:hover,
         <button class="dropdown-toggle" onclick="toggleDropdown()">Produktai <i id="caret-icon"
                                                                                 class="bi bi-caret-down"></i></button>
         <div class="dropdown-content" id="dropdownMenu">
-            <a href="{% url 'flowers' %}">Puokštės</a>
-            <a href="#">Gėlės</a>
+            <a href="{% url 'flowers' %}">Rožės</a>
+            <a href="{% url 'decorations' %}">Dekoracijos</a>
             <a href="#">Pakavimas</a>
         </div>
     </div>
+</nav>
+<nav>
+    <a href="{% url 'cart' %}">Cart ({{ request.session.cart|length }} items)</a>
 </nav>
 <div class="container">
     {% block content %}
